// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component renders Basic story 1`] = `
.emotion-0 {
  color: var(--dt-colors-primary);
  background-color: var(--dt-colors-background);
  list-style: none;
  padding: var(--dt-padding-md) var(--dt-padding-lg);
  cursor: pointer;
}

.emotion-0:first-of-type {
  border-radius: 6px 6px 0 0;
}

.emotion-0:last-of-type {
  border-radius: 0 0 6px 6px;
}

.emotion-0:hover {
  color: var(--dt-colors-background);
  background-color: var(--dt-colors-primary);
}

<body>
  <div>
    <li
      class="emotion-0 emotion-1"
    >
      List Item
    </li>
  </div>
</body>
`;

exports[`ListItem component renders Selected story 1`] = `
.emotion-0 {
  color: var(--dt-colors-primary);
  background-color: var(--dt-colors-background);
  list-style: none;
  padding: var(--dt-padding-md) var(--dt-padding-lg);
  cursor: pointer;
  color: var(--dt-colors-background);
  background-color: var(--dt-colors-primary);
}

.emotion-0:first-of-type {
  border-radius: 6px 6px 0 0;
}

.emotion-0:last-of-type {
  border-radius: 0 0 6px 6px;
}

.emotion-0:hover {
  color: var(--dt-colors-background);
  background-color: var(--dt-colors-primary);
}

<body>
  <div>
    <li
      class="emotion-0 emotion-1"
    >
      List Item Selected
    </li>
  </div>
</body>
`;
